syntax = "proto3";

package account;
option go_package = "./sso";

message Email {
  string email = 1;
}

message Password {
  string password = 1;
}

message Account {
  Email email = 1;
  Password password = 2;
  bool isCompany = 3;
}

message AccountInfo{
  Email email = 1;
  bool isCompany = 2;
}