syntax = "proto3";
package pb;
import "google/protobuf/empty.proto";
import "account.proto";
option go_package = "./sso";


message LoginData{
  account.Email email = 1;
  account.Password password = 2;
}
message Token{
  string token = 1;
}
message RefreshToken{
  Token refreshToken = 1;
}

message AccessToken{
  Token accessToken = 1;
}

message PairTokens{
  AccessToken accessToken = 1;
  RefreshToken refreshToken = 2;
}

message NewPassword{
  account.Password oldPassword = 1;
  account.Password password = 2;
}

message NewEmail{
  account.Email email = 1;
}

message VerifyTokenResponse{
  bool status = 1;
  string accountId = 2;
}

message OTPRequest{
  account.Email email = 1;
  string code = 2;
}

message OTPResponse{
  bool status = 1;
}

message RestorePasswordRequest{
  account.Email email = 1;
  account.Password newPassword = 2;
}


message SendOTPRequest{
  account.Email email = 1;
}

message TokensWithUserInfo{
  AccessToken accessToken = 1;
  RefreshToken refreshToken = 2;
  account.AccountInfo account = 3;
}

service SSOServerService {
  rpc SignUp(account.Account) returns (TokensWithUserInfo){};
  rpc Login(LoginData) returns (TokensWithUserInfo){};
  rpc VerifyToken (Token) returns (VerifyTokenResponse) {};
  rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {};
  rpc RotateTokens(RefreshToken) returns (PairTokens){};
  rpc ChangePassword(NewPassword) returns (PairTokens) {};
  rpc ChangeEmail(NewEmail) returns (PairTokens) {};
  rpc SendOTP(SendOTPRequest) returns (google.protobuf.Empty) {};
  rpc CheckOTP(OTPRequest) returns (OTPResponse) {};
  rpc RestorePassword(RestorePasswordRequest) returns (PairTokens) {};
  rpc LogoutFromDevices(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

